[gd_scene load_steps=13 format=2]

[ext_resource path="res://components/config/config_templates/component_config_simple.gd" type="Script" id=1]
[ext_resource path="res://components/config/config_templates/component_config_line_edit_int.gd" type="Script" id=2]
[ext_resource path="res://components/config/config_templates/component_config_line_edit_float.gd" type="Script" id=3]
[ext_resource path="res://components/elements/styled/icon_check_button.tscn" type="PackedScene" id=4]
[ext_resource path="res://assets/icons/icon_128_add.svg" type="Texture" id=5]
[ext_resource path="res://components/elements/styled/icon_button.tscn" type="PackedScene" id=6]
[ext_resource path="res://assets/icons/icon_128_to_null.svg" type="Texture" id=7]
[ext_resource path="res://assets/icons/icon_128_info_circle.svg" type="Texture" id=8]
[ext_resource path="res://components/config/config_templates/config_custom_tooltip.gd" type="Script" id=9]

[sub_resource type="DynamicFontData" id=2]
font_path = "res://assets/theme/Barlow-Regular.ttf"

[sub_resource type="DynamicFont" id=3]
size = 13
use_mipmaps = true
use_filter = true
font_data = SubResource( 2 )

[sub_resource type="StyleBoxEmpty" id=7]
content_margin_left = 10.0

[node name="TemplateSimple" type="VBoxContainer"]
margin_top = 339.0
margin_right = 1900.0
margin_bottom = 377.0
custom_constants/separation = 1
script = ExtResource( 1 )

[node name="VarContent" type="HBoxContainer" parent="."]
margin_right = 1900.0
margin_bottom = 20.0

[node name="HintIcon" type="TextureRect" parent="VarContent"]
modulate = Color( 0.123871, 0.346745, 0.480469, 1 )
margin_right = 18.0
margin_bottom = 20.0
rect_min_size = Vector2( 18, 20 )
size_flags_horizontal = 0
size_flags_vertical = 0
texture = ExtResource( 8 )
expand = true
stretch_mode = 6
script = ExtResource( 9 )

[node name="Control" type="Control" parent="VarContent"]
margin_left = 22.0
margin_right = 22.0
margin_bottom = 20.0

[node name="VarName" type="Label" parent="VarContent"]
margin_left = 26.0
margin_right = 326.0
margin_bottom = 20.0
rect_min_size = Vector2( 300, 0 )
size_flags_vertical = 0
text = "Description"

[node name="VarValueIsNull" type="Label" parent="VarContent"]
visible = false
modulate = Color( 1, 1, 1, 0.439216 )
margin_left = 304.0
margin_right = 1900.0
margin_bottom = 21.0
size_flags_horizontal = 3
size_flags_vertical = 6
theme_type_variation = "LabelCode"
text = "= null"

[node name="VarValueBool" parent="VarContent" instance=ExtResource( 4 )]
visible = false
margin_left = 304.0
margin_right = 337.0
rect_min_size = Vector2( 23, 23 )
hint_tooltip = "Enable/Disable"
size_flags_horizontal = 2
size_flags_vertical = 6
icon_margin = 1

[node name="VarValueTextbox" type="LineEdit" parent="VarContent"]
visible = false
margin_left = 304.0
margin_right = 1900.0
margin_bottom = 24.0
size_flags_horizontal = 3
theme_type_variation = "LineEditConfig"
caret_blink = true
caret_blink_speed = 0.5

[node name="VarValueInt" type="LineEdit" parent="VarContent"]
visible = false
margin_left = 324.0
margin_right = 1900.0
margin_bottom = 24.0
size_flags_horizontal = 3
theme_type_variation = "LineEditConfig"
script = ExtResource( 2 )

[node name="VarValueFloat" type="LineEdit" parent="VarContent"]
visible = false
margin_left = 304.0
margin_right = 1900.0
margin_bottom = 34.0
size_flags_horizontal = 3
theme_type_variation = "LineEditConfig"
script = ExtResource( 3 )

[node name="ButtonSetToNull" parent="VarContent" instance=ExtResource( 6 )]
visible = false
modulate = Color( 1, 1, 1, 0.235294 )
margin_left = 304.0
margin_right = 329.0
margin_bottom = 25.0
rect_min_size = Vector2( 25, 25 )
hint_tooltip = "To null"
size_flags_vertical = 5
flat = true
icon_tex = ExtResource( 7 )
icon_margin = 3

[node name="ButtonAddValue" parent="VarContent" instance=ExtResource( 6 )]
visible = false
margin_left = 1852.0
margin_right = 1885.0
margin_bottom = 34.0
hint_tooltip = "Add Value"
icon_tex = ExtResource( 5 )
icon_margin = 3

[node name="Description" type="Label" parent="."]
visible = false
modulate = Color( 1, 1, 1, 0.54902 )
margin_top = 21.0
margin_right = 1900.0
margin_bottom = 37.0
custom_fonts/font = SubResource( 3 )
custom_styles/normal = SubResource( 7 )
text = "Description"

[connection signal="pressed" from="VarContent/ButtonSetToNull" to="." method="_on_ButtonSetToNull_pressed"]
[connection signal="pressed" from="VarContent/ButtonAddValue" to="." method="_on_ButtonAddValue_pressed"]
